--- a/app/views/ruby_lessons/lessons/lesson_11.html.erb
+++ b/app/views/ruby_lessons/lessons/lesson_11.html.erb
@@ -5,7 +5,7 @@
 </p>
 
 <p> 
-  We saw many Array and String methods - but it turns out we can actually create methods ourselves as well.
+  We saw many Array and String methods - but it turns out <strong>we can actually create methods ourselves as well.</strong>
 </p>
 
 <p>
@@ -97,7 +97,7 @@ end
 </code></pre>
 
 <p>
-  Awesome! You've written your first Ruby method. Even though we have written our method, our method won't do naything until we call it. <strong>We can call the method by typing the method name</strong>:
+  Awesome! You've written your first Ruby method. Even though we have written our method, our method won't do anything until we call it. <strong>We can call the method by typing the method name</strong>:
 </p>
 
 <pre><code class="ruby">
@@ -139,7 +139,7 @@ touch greet.rb
 </code></pre>
 
 <p>
-  This will create a new file called <code>greeting.rb</code>. Let's open this file up.
+  This will create a new file called <code>greet.rb</code>. Let's open this file up.
 </p>
 
 <p>
@@ -163,7 +163,7 @@ end
 </code></pre>
 
 <p>
-  The next step is to take in a <strong>parameter</strong>. <strong>Parameters are information passed into the method so that we can use that information inside that method.</strong>
+  The next step is to take in a <strong>parameter</strong>. <strong>As we talked about before, parameters are information passed into the method so that we can use that information inside that method.</strong>
 </p>
 
 <p>
@@ -250,7 +250,7 @@ ruby greet.rb
   <ol>
     <li>We defined a method called <code>greet</code></li>
     <li>We added a parameter called <code>name</code></li>
-    <li>We are print out <code>"Greeting #{name}!"</code>. <code>#{name}</code> is the information passed in as a parameter</li>
+    <li>We are printing out <code>"Greeting #{name}!"</code>. <code>#{name}</code> is the information passed in as a parameter</li>
     <li>We end the method with <code>end</code></li>
   </ol>
 </div>
