--- a/app/views/ruby_lessons/lessons/lesson_12.html.erb
+++ b/app/views/ruby_lessons/lessons/lesson_12.html.erb
@@ -400,7 +400,13 @@ ruby is_even.rb
 
 <h2>Coding Challenge</h2>
 
-<p>
+<ul>
+  <li>Write a method called <code>is_divisible_by_7_or_11?</code> that returns <code>true</code> if the number passed in as an argument is divisible by 7 or 11, and <code>false</code> if the number passed in is <strong>not</strong> divisible by 7 nor 11.</li>
+</ul>
+
+<% @submission_form = true %>
+
+<!-- p>
   To wrap up what we've learned so far, let's create an application where the user can input orders at a restaurant and the price of the order, and generate a bill automatically.
 </p>
 
@@ -766,8 +772,8 @@ break if order.downcase == "exit"
   
 </div>
 
-<% @hints = true %>
-
-<% @submission_form = true %>
 
 
+
+
+ -->
