--- a/app/views/ruby_lessons/lessons/lesson_6.html.erb
+++ b/app/views/ruby_lessons/lessons/lesson_6.html.erb
@@ -111,6 +111,52 @@ ruby string_methods.rb
   As you can see, Ruby provides us with really convenient methods to do different things with strings.
 </p>  
 
+<div class="well">
+  <h3>Parameters and Arguments</h3>
+
+  <p>
+    Let's take a look at the following line of code that you just wrote:
+  </p>
+
+<pre><code class="ruby">
+"this is a string".include?("jy")
+</code></pre>
+
+  <p>
+    Notice the <code>("jy")</code> after <code>include?</code>. Everything in between the parenthesis is called a <strong>parameter</strong>, or an <strong>argument</strong>. Both words mean the same thing.
+  </p>
+
+  <p>
+    Arguments are data that we pass into the method. The method takes the data and uses it to execute the method.
+  </p>
+
+  <p>
+    For example, the <code>include?</code> method takes in an argument and uses it to determine if the element passed in as the argument exists inside the string.
+  </p>
+  
+  <p>
+    We also pass in an argument for the <code>split</code> method:
+  </p>
+
+<pre><code class="ruby">
+"this is a string".split("")
+</code></pre> 
+
+  <p>
+    In this case, the <code>split</code> method uses the parameter to split the string. If we pass in another parameter, the method will split the string in a different way:
+  </p>
+
+<pre><code class="ruby">
+"this is a string".split("i")
+=> ["th", "s ", "s a str", "ng"]
+</code></pre> 
+
+  <p>
+    As you can see, the <code>split</code> method is splitting the string by the letter <code>i</code>.
+  </p>
+
+</div>
+
 <p>
   In case you were wondering, for the most part, <strong>you don't need to memorize these methods</strong>. Instead of memorizing, even professional programmers Google for the correct method to use all of the time.
 </p>
