--- a/app/views/ruby_lessons/lessons/lesson_13.html.erb
+++ b/app/views/ruby_lessons/lessons/lesson_13.html.erb
@@ -48,11 +48,52 @@
 
 <%= image_tag 'ruby_lessons/class_vs_instance.png', class: 'screenshot img-responsive' %>
 
+<p>
+	Let's take another example - cars.
+</p>
 
 <p>
-	With this brief introduction of Object Oriented Programming in mind, let's go back to our bill generator program and turn it into an object oriented program.
-</p>	
+	All cars have:
+</p>
 
+<ul>
+	<li>Color</li>
+	<li>Brand</li>
+	<li>Max Speed</li>
+</ul>
+
+<p>
+	All cars can:
+</p>
+
+<ul>
+	<li>Drive forward</li>
+	<li>Drive backward</li>
+	<li>Stop</li>
+	<li>Turn right</li>
+	<li>Turn left</li>
+</ul>
+
+<p>
+	The things that all cars have are the <strong><em>attributes</em></strong>. The things that all cars can do are the <code>methods</code>.
+</p>
+
+<p>
+	Even though every car has a color, brand, max speed, and so on, every car also has different colors, brand, and max speeds. 
+</p>
+
+<p>
+	Every car is an <strong><em>instance</em></strong> of a <code>Car</code> class. The <code>Car</code> class simply serves as a <em>blueprint</em> for creating new instances of cars.
+</p>
+
+
+<h2>Things to Think About</h2>
+
+<ol>
+	<li>Try to think of real life objects and try to model them as classes and instances</li>
+</ol>
+
+<!-- 
 
 <h3>Objects</h3>
 
@@ -115,3 +156,4 @@
 
 
 
+ -->
