add what we are building to filmster

--- a/app/views/filmster_lessons/lessons/lesson_4.html.erb
+++ b/app/views/filmster_lessons/lessons/lesson_4.html.erb
@@ -1,3 +1,14 @@
+<h2>What we are building</h2>
+
+<p>
+  We are going to build a movie reviewing platform where users can search for their favorite movies, review them, and view reviews by other users as well.
+</p>
+
+<p>
+  Go to <%= link_to 'this link', 'http://filmster-techrise.herokuapp.com/', target: '_blank' %> to see the basic functionality of the application.
+</p>
+
+
 <h2>Create a new Rails app</h2>
 <p>
   To create the application, run the following command:
