--- a/app/views/ruby_lessons/lessons/lesson_11.html.erb
+++ b/app/views/ruby_lessons/lessons/lesson_11.html.erb
@@ -256,6 +256,18 @@ ruby greet.rb
 </div>
 
 <p>
+  One thing to note is that in Ruby, using parenthesis to provide parameters are optional:
+</p>
+
+<pre><code class="ruby">
+# The two statements below are the same
+greet "Jack"
+greet("Jack")
+</code></pre>
+
+<hr>
+
+<p>
   Let's create a new ruby file called <code>happy_birthday.rb</code>:
 </p>
 
