--- a/app/views/ruby_lessons/lessons/lesson_21.html.erb
+++ b/app/views/ruby_lessons/lessons/lesson_21.html.erb
@@ -8,50 +8,59 @@
 
 <p>For example, given a temperatue in centigrade, 0<sup>o</sup>C, it should return 32.</p>
 
-<div class="well">
-  <h3>Getting Started</h3>
 
-  <p>
-    In your C9 workspace you have created in the previous lesson, let's navigate to the <code>temperature</code> directory. In the workspace terminal, type in the following command and press enter:
-  </p>
+<h3>Getting Started</h3>
+
+<p>
+  In your C9 workspace you have created in the previous lesson, let's navigate to the <code>temperature</code> directory. In the workspace terminal, type in the following command and press enter:
+</p>
 
 <pre><code class="bash">
 cd temperature
 </code></pre>
 
-  <p>
-    Next, type in the following command and press enter:
-  </p>
+<p>
+  Next, type in the following command and press enter:
+</p>
 
 <pre><code class="bash">
-bundle
+bundle install
 </code></pre>
-
-  <p>
-    This should install a bunch of packages and dependencies:
-  </p>
 
 <%= image_tag 'ruby_lessons/temperature/coding_challenge_bundle.png', class: 'img-responsive screenshot' %>
 
-  <p>
-    Next, let's run the following command:
-  </p>
+
+<p>
+  This should install a bunch of packages and dependencies.
+</p>
+
+
+<p>
+  Next, let's run the following command to run the test suites:
+</p>
 
 <pre><code class="ruby">
   rspec</code></pre>
 
-  <p>
-    Since you haven't written any code yet, you will see that all the tests fail.The output should look something like this:
-  </p>
+<p>
+  Since you haven't written any code yet, you will see that all the tests fail.The output should look something like this:
+</p>
 
-  <%= image_tag 'ruby_lessons/temperature/temperature_failing.png', class: 'img-responsive screenshot' %>
+<%= image_tag 'ruby_lessons/temperature/temperature_failing.png', class: 'img-responsive screenshot' %>
 
-  <p>
-    Try writing codes on your own. Make use of Google if you need. Once you finish writing the code, run <code>rspec</code> again and you should see passing tests.
-  </p>
+<p>
+  Open <code>temperature.rb</code>. Inside this file, you need to write a method that will convert centigrade into fahrenheit.
+</p>
 
-  <%= image_tag 'ruby_lessons/temperature/temperature_passing.png', class: 'img-responsive screenshot' %>
-</div>
+<p>
+  <strong>Your goal is to make every one of these tests pass.</strong> Once you finish writing the code, run the <code>rspec</code> command. Keep rewriting your code until all of the tests pass when you run the <code>rspec</code> command.
+</p>
+
+<%= image_tag 'ruby_lessons/temperature/temperature_passing.png', class: 'img-responsive screenshot' %>
+
+<p>
+  Once all of the tests have passed, submit your code down below.
+</p>
 
 <% @submission_form = true %>
 
