--- a/app/views/ruby_lessons/lessons/lesson_20.html.erb
+++ b/app/views/ruby_lessons/lessons/lesson_20.html.erb
@@ -1,62 +1,60 @@
 
 
 <p>
-  Now that you have some experience with Ruby codes, let's get familiar with some testing the ruby codes.
+  Now that you have some experience with write Ruby code, let's get familiar with the concept of <strong><em>testing</em></strong>.
 </p>
 
 <h2>Making Our First Test Pass</h2>
 
 <p>
-  As a Ruby developer, being able to write <em>tests</em> and developing your code in a <em>Test Driven</em> manner will take you far in your career. That's why we incorporate <strong>Test Driven Development</strong> practices from the start.
+  As a Ruby developer, being able to write <em>tests</em> and developing your code in a <em>Test Driven</em> manner will take you far in your career. That's why we incorporate <strong>Test Driven Development</strong> practices from the start. Don't be freaked out by these terms, slowly, you will get used to these terms.
 </p>
 
-<div class="well">
-  <h3>Test Driven Development</h3>
 
-  <p>
-    Let's say we want to write a method called <code>say_hello</code> that takes in a name and outputs <code>"Hello, name!"</code>.
-  </p>
+<h3>Test Driven Development</h3>
 
-  <p>
-    When we start building the method, <strong>we first <em>intuitively</em> think about what the output should be.</strong>
-  </p>
+<p>
+  Let's say we want to write a method called <code>say_hello</code> that takes in a name and outputs <code>"Hello, name!"</code>.
+</p>
 
-  <p>
-    For example in this case, if I input <code>"Mark"</code>, then the output should be <code>"Hello, Mark!"</code>. If the input is <code>"Bob"</code>, then the output should be <code>"Hello, Bob!"</code>.
-  </p>
+<p>
+  When we start building the method, <strong>we first <em>intuitively</em> think about what the output should be.</strong>
+</p>
 
-  <p>
-    <strong>Notice how we are thinking about what the output should be <em>before</em> we have started writing any code.</strong>
-  </p>
+<p>
+  For example in this case, if I input <code>"Mark"</code>, then the output should be <code>"Hello, Mark!"</code>. If the input is <code>"Bob"</code>, then the output should be <code>"Hello, Bob!"</code>.
+</p>
 
-  <p>
-    After we think about what the output should be, the next step is to actually write the code and see if it works.
-  </p>
+<p>
+  <strong>Notice how we are thinking about what the output should be <em>before</em> we have started writing any code.</strong>
+</p>
 
-  <p>
-    If it doesn't work, we edit the code, run the code, and repeat, until it finally works.
-  </p>
+<p>
+  After we think about what the output should be, the next step is to actually write the code and see if it works.
+</p>
 
-  <p>
-    <strong>This is the basic methodology of TDD:</strong>
-  </p>
+<p>
+  If it doesn't work, we edit the code, run the code, and repeat, until it finally works.
+</p>
 
-  <ol>
-    <li>Before writing any code, we think about what the output should be</li>
-    <li>We write the code</li>
-    <li>We <em>test</em> to see if the output matches what we expected</li>
-    <li>If it didn't match, rewrite the code until the output matches</li>
-  </ol>
+<p>
+  <strong>This is the basic methodology of TDD:</strong>
+</p>
 
-  <p>
-    By doing this, <strong>not only can we be more confident about our code, but we can also write higher quality code as well.</strong>
-  </p>
+<ol>
+  <li>Before writing any code, we think about what the output should be</li>
+  <li>We write the code</li>
+  <li>We <em>test</em> to see if the output matches what we expected</li>
+  <li>If it didn't match, rewrite the code until the output matches</li>
+</ol>
 
-  <p>
-    You will learn more in-depth about Test Driven Development in the later lessons - for now, just know that knowing this process is extremely important as a developer.
-  </p>
+<p>
+  By doing this, <strong>not only can we be more confident about our code, but we can also write higher quality code as well.</strong>
+</p>
 
-</div>
+<p>
+  You will learn more in-depth about Test Driven Development in the later lessons - for now, just know that knowing this process is extremely important as a developer.
+</p>
 
 
 <div class="well">
