--- a/app/views/ruby_lessons/lessons/lesson_19.html.erb
+++ b/app/views/ruby_lessons/lessons/lesson_19.html.erb
@@ -5,18 +5,18 @@
 </p>
 
 <p>
-  Now that you have a basic grasp on how Ruby works, let's try to apply it in one of the most common basic interview problems: <strong>The Foobar Problem</strong>. This is a real interview problem that is used to weed out applicants who don't have a good grasp on basic programming, so it's really important that you have the necessary skills to solve this problem.
+  Now that you have a basic grasp on how Ruby works, let's try to apply it in one of the most common basic interview problems: <strong>The FizzBuzz Problem</strong>. This is a real interview problem that is used to weed out applicants who don't have a good grasp on basic programming, so it's really important that you have the necessary skills to solve this problem.
 </p>
 
-<h3>The Foobar Problem</h3>
+<h3>The FizzBuzz Challenge</h3>
 
 <ul>
   <li>First, prompt the user "How many numbers do you want to see?"</li>
   <li>Next, start from <code>1</code> up to the number that the user inputed</li>
   <li>For each number, do the following:</li>
-  <li>For numbers divisble by <code>3</code>, print out <code>Foo</code></li>
-  <li>For numbers divisible by <code>5</code>, print out <code>Bar</code></li>
-  <li>For numbers divisible by <code>15</code>, print out <code>FooBar</code></li>
+  <li>For numbers divisble by <code>3</code>, print out <code>Fizz</code></li>
+  <li>For numbers divisible by <code>5</code>, print out <code>Buzz</code></li>
+  <li>For numbers divisible by <code>15</code>, print out <code>FizzBuzz</code></li>
   <li>Otherwise, print the number</li>
 </ul>
 
@@ -25,55 +25,55 @@
 </p>
 
 <pre><code class="bash">
-ruby foobar.rb
+ruby fizzbuzz.rb
 How many numbers do you want to see? 3
 1
 2
-Foo
+Fizz
 </code></pre>
 
 <pre><code class="bash">
-ruby foobar.rb
+ruby fizzbuzz.rb
 How many numbers do you want to see? 39
 1
 2
-Foo
+Fizz
 4
-Bar
-Foo
+Buzz
+Fizz
 7
 8
-Foo
-Bar
+Fizz
+Buzz
 11
-Foo
+Fizz
 13
 14
-Foobar
+FizzBuzz
 16
 17
-Foo
+Fizz
 19
-Bar
-Foo
+Buzz
+Fizz
 22
 23
-Foo
-Bar
+Fizz
+Buzz
 26
-Foo
+Fizz
 28
 29
-Foobar
+FizzBuzz
 31
 32
-Foo
+Fizz
 34
-Bar
-Foo
+Buzz
+Fizz
 37
 38
-Foo
+Fizz
 </code></pre>
 
 <h3>How to run the code</h3>
